# winter

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md
.cargo/: config.toml
config/: mcp-http.json  mcp.json
crates/winter/: Cargo.toml
crates/winter-agent/: Cargo.toml
crates/winter-agent/src/: agent.rs  context.rs  error.rs  identity.rs  lib.rs  prompt.rs  state.rs
crates/winter-approve/: Cargo.toml
crates/winter-approve/src/: main.rs
crates/winter-atproto/: Cargo.toml
crates/winter-atproto/src/: cache.rs  car.rs  client.rs  deno_detect.rs  dispatch.rs  error.rs  firehose.rs  jetstream.rs  lib.rs  records.rs  sync.rs  types.rs  uri.rs
crates/winter-atproto/tests/: sync_state_machine.rs
crates/winter-claude/: CLAUDE.md  Cargo.toml  DEV_ENVIRONMENT_STATUS.md  OPEN_SOURCE_READINESS_REPORT.md  OPEN_SOURCE_READINESS_TASKS.md  QUICK_START.md  tarpaulin.toml
crates/winter-claude/.github/workflows/: performance.yml
crates/winter-claude/benches/: performance.rs
crates/winter-claude/examples/: 01_basic_sdk.rs  02_sdk_sessions.rs  03_streaming.rs  04_tools.rs  05_complete_app.rs  basic_usage.rs  cli_analytics.rs  cli_interactive.rs  configuration.rs  error_handling.rs  session_management.rs  session_persistence.rs  streaming.rs
crates/winter-claude/examples/tests/: example_tests.rs
crates/winter-claude/scripts/: validate_test_quality.sh
crates/winter-claude/src/: lib.rs
crates/winter-claude/src/cli/: error.rs  error_test.rs
crates/winter-claude/src/cli/analytics/: analytics_test.rs  dashboard.rs  dashboard_test.rs  dashboard_tests.rs  infrastructure_tests.rs  memory_optimizer.rs  metrics.rs  metrics_test.rs  mod.rs  performance_baseline_test.rs  performance_fixes.rs  performance_profiler.rs  report_test.rs  reports.rs  simple.rs  streaming_tests.rs  test_utils.rs  time_series_optimizer.rs
crates/winter-claude/src/cli/cost/: TASK_1_4_SUMMARY.md  budget_tests.rs  tracker_test.rs
crates/winter-claude/src/cli/execution/: execution_test.rs  parallel.rs
crates/winter-claude/src/cli/history/: mod.rs  store.rs
crates/winter-claude/src/cli/output/: formatter.rs  mod.rs
crates/winter-claude/src/cli/profiling/: benchmark.rs  mod.rs
crates/winter-claude/src/cli/session/: mod.rs
crates/winter-claude/src/core/: config.rs  config_test.rs  error.rs  message.rs  mod.rs  types.rs
crates/winter-claude/src/core/session/: types.rs
crates/winter-claude/src/mcp/: config.rs  load_balancer.rs  mod.rs  protocol.rs
crates/winter-claude/src/mcp/clients/: stdio.rs  websocket.rs
crates/winter-claude/src/mcp/clients/services/: enhanced_services.rs  notion_api.rs
crates/winter-claude/src/mcp/clients/slack/: mod.rs
crates/winter-claude/src/mcp/core/: error.rs  external_mcp.rs  nodes.rs
crates/winter-claude/src/mcp/core/ai_agents/: anthropic.rs
crates/winter-claude/src/mcp/server/customer_support/: server.rs
crates/winter-claude/src/mcp/server/customer_support/tools/: escalate_ticket.rs  filter_spam.rs  generate_response.rs  send_reply.rs  ticket_router.rs  validate_ticket.rs
crates/winter-claude/src/mcp/server/knowledge_base/tools/: filter_spam_query.rs  query_router.rs  slack_search.rs
crates/winter-claude/src/mcp/testing/: mock_client.rs  mod.rs
crates/winter-claude/src/runtime/: backpressure.rs  client.rs  process.rs  process_tests.rs  stream.rs  stream_config.rs  telemetry.rs
crates/winter-claude/tests/cli/: analytics_integration_test.rs  cli_integration_test.rs  execution_tests.rs  integration_test.rs  metrics_test_standalone.rs  module_integration_test.rs  simple_integration_test.rs
crates/winter-claude/tests/core/: ci_reliability_test.rs  core_integration_test.rs  critical_path_tests.rs  critical_path_tests.rs.disabled  penetration_tests.rs  property_tests.rs  security_tests.rs
crates/winter-claude/tests/mcp/: config_tests.rs  integration_test.rs  integration_tests.rs  mcp_workflow_tests.rs  protocol_tests.rs  transport_tests.rs
crates/winter-claude/tests/runtime/: chaos_engineering_tests.rs  critical_path_tests.rs  error_handling_tests.rs  integration_tests.rs
crates/winter-datalog/: Cargo.toml
crates/winter-datalog/src/: cache.rs  compiler.rs  coordinator.rs  dependency.rs  derived.rs  error.rs  executor.rs  extractor.rs  lib.rs  validator.rs
crates/winter-datalog/tests/: cache_state_machine.rs
crates/winter-mcp/: Cargo.toml
crates/winter-mcp/src/: deno.rs  http.rs  lib.rs  protocol.rs  secrets.rs  server.rs
crates/winter-mcp/src/bluesky/: client.rs  mod.rs  types.rs
crates/winter-mcp/src/tools/: blog.rs  bluesky.rs  custom_tools.rs  declarations.rs  directives.rs  enrich.rs  facts.rs  identity.rs  inbox.rs  jobs.rs  mod.rs  notes.rs  pds.rs  permissions.rs  rules.rs  thoughts.rs  triggers.rs  wiki.rs
crates/winter-scheduler/: Cargo.toml
crates/winter-scheduler/src/: error.rs  lib.rs  scheduler.rs  types.rs
crates/winter-web/: Cargo.toml
crates/winter-web/src/: error.rs  lib.rs  routes.rs  sse.rs  thought_stream.rs
crates/winter-wiki-web/: Cargo.toml
crates/winter-wiki-web/src/: backfill.rs  db.rs  firehose.rs  main.rs  renderer.rs  resolver.rs  routes.rs
crates/winter/src/: bootstrap.rs  daemon.rs  main.rs  migrate.rs  trigger_engine.rs
crates/winter/tests/: integration_tests.rs  property_tests.rs
docker/: .env.example  Dockerfile  Dockerfile.bootstrap  docker-compose.yml  install.sh  winter-web.service  winter.service
examples/: example_queries.md  example_rules.json  identity_seed.json
lexicons/: diy.razorgirl.winter.directive.json  diy.razorgirl.winter.fact.json  diy.razorgirl.winter.factDeclaration.json  diy.razorgirl.winter.identity.json  diy.razorgirl.winter.job.json  diy.razorgirl.winter.note.json  diy.razorgirl.winter.rule.json  diy.razorgirl.winter.secretMeta.json  diy.razorgirl.winter.state.json  diy.razorgirl.winter.thought.json  diy.razorgirl.winter.tool.json  diy.razorgirl.winter.toolApproval.json  diy.razorgirl.winter.trigger.json  diy.razorgirl.winter.wikiEntry.json  diy.razorgirl.winter.wikiLink.json
tests/: docker-compose.test.yml
(+1 files in other folders)
