[package]
name = "winter-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent logic for Winter"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Claude SDK
winter-claude = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client (for logging built-in tool calls)
reqwest = { workspace = true }

# Async streams
futures-util = { workspace = true }

# Internal
winter-atproto = { workspace = true }
winter-datalog = { workspace = true }
winter-mcp = { workspace = true }

# Bluesky
bsky-sdk = { workspace = true }
atrium-api = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
