[package]
name = "winter-approve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for operators to approve Winter custom tools"

[[bin]]
name = "winter-approve"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Password input
rpassword = "5.0"

# Internal types
winter-atproto = { workspace = true }
