[package]
name = "winter-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for Claude CLI integration"

[features]
default = []
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:directories",
    "dep:dirs",
    "dep:colored",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:notify",
    "dep:prettytable-rs",
    "dep:tempfile",
    "dep:toml",
    "dep:lru",
    "dep:sysinfo",
]
analytics = ["cli"]
mcp = [
    "dep:tokio-util",
    "dep:futures-util",
    "dep:tokio-tungstenite",
    "dep:base64",
    "dep:prometheus",
]
sqlite = ["dep:sqlx"]
full = ["cli", "analytics", "mcp", "sqlite"]

[lib]
name = "winter_claude"
path = "src/lib.rs"

[[bin]]
name = "winter-claude"
path = "src/bin/claude-sdk-rs.rs"
required-features = ["cli"]

[[example]]
name = "01_basic_sdk"
path = "examples/01_basic_sdk.rs"

[[example]]
name = "02_sdk_sessions"
path = "examples/02_sdk_sessions.rs"

[[example]]
name = "03_streaming"
path = "examples/03_streaming.rs"

[[example]]
name = "04_tools"
path = "examples/04_tools.rs"

[[example]]
name = "05_complete_app"
path = "examples/05_complete_app.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "cli_analytics"
path = "examples/cli_analytics.rs"

[[example]]
name = "cli_interactive"
path = "examples/cli_interactive.rs"

[[example]]
name = "configuration"
path = "examples/configuration.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "session_management"
path = "examples/session_management.rs"

[[example]]
name = "session_persistence"
path = "examples/session_persistence.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[dependencies]
# Core dependencies - use workspace where available
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
uuid = { workspace = true }
async-trait = { workspace = true }

# Crate-specific dependencies
thiserror = "1.0"
bytes = "1.7"
futures = "0.3"
libc = "0.2"
num_cpus = "1.16"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
url = "2.5"
which = "6.0"

# Optional - CLI features
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.5", optional = true }
colored = { version = "2.1", optional = true }
directories = { version = "5.0", optional = true }
dirs = { version = "5.0", optional = true }
lru = { version = "0.12", optional = true }
notify = { version = "6.1", optional = true }
prettytable-rs = { version = "0.10", optional = true }
sysinfo = { version = "0.32", optional = true }
tempfile = { version = "3.10", optional = true }
toml = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Optional - MCP features
base64 = { version = "0.22", optional = true }
futures-util = { version = "0.3", optional = true }
prometheus = { version = "0.14", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

# Optional - SQLite features
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"
insta = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"
wiremock = { workspace = true }
