[package]
name = "winter-datalog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Soufflé datalog integration for Winter"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Temp files
tempfile = { workspace = true }

# Date/time (for types)
chrono = { workspace = true }

# Regex for predicate extraction
regex = { workspace = true }

# Internal
winter-atproto = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
