[package]
name = "winter-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server and tools for Winter"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Web framework (for HTTP transport)
axum = { workspace = true }

# Internal
winter-atproto = { workspace = true }
winter-datalog = { workspace = true }

# Bluesky
bsky-sdk = { workspace = true }
atrium-api = { workspace = true }

# Temp files for datalog execution and Deno sandboxing
tempfile = { workspace = true }

# Platform directories for secrets storage
dirs = "5"
base64.workspace = true

# UUID for tool execution tokens
uuid = { workspace = true }

# HTTP client for operator PDS lookups
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
tower = { workspace = true }
