[package]
name = "winter-wiki-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone wiki webapp for ATProto - firehose-indexed wiki browser"

[[bin]]
name = "winter-wiki-web"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
ipld-core = { workspace = true }

# CAR file parsing + firehose
iroh-car = { workspace = true }
tokio-tungstenite = { workspace = true }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Markdown rendering
pulldown-cmark = "0.12"

# HTTP client (DID resolution, backfill)
reqwest = { workspace = true }

# Date/time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regular expressions
regex = { workspace = true }

# CLI
clap = { workspace = true }

# Internal (types only)
winter-atproto = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
